2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/TextUtil.cs, Mono.TextEditor/TextEditor.cs: Implemented
	  'go to matching bracket' action.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SemanticRule.cs: Url textmarker now has a
	  type enum.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed bug in ColumnToVisualX.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Commented out smooth scrooling (can't get
	  it right)

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs: Markers
	  are now drawn with selection information.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed highlighting bracket drawing
	  issue.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/Caret.cs: Fixed caret drawing error.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/ISegment.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Segment.cs, Mono.TextEditor/LineSegment.cs: Fixed
	  folding marker drawing.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, OblivionStyle.xml, UbuntuStyle.xml,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/Style.cs, C64Style.xml: Fixed some drawing
	  issues & speed bug with ctrl+home.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/ISegment.cs, Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextMarker.cs,